Fix spacing on collaboration header on story page.

--- a/drupal/sites/all/themes/checkdesk/assets/css/style.css
+++ b/drupal/sites/all/themes/checkdesk/assets/css/style.css
@@ -5954,7 +5954,6 @@ body.page-liveblog #main .view-liveblog .pager-load-more .ajax-progress-throbber
   width: 100%;
   table-layout: fixed;
   padding-bottom: 15px;
-  margin-bottom: 30px;
 }
 body.page-node-collaboration .story .story-collaboration-header-wrapper {
   border-bottom: 1px solid rgba(16, 33, 47, 0.1);
@@ -6031,6 +6030,7 @@ body.page-node-collaboration .story .story-collaboration-header-wrapper {
 
 .story .story-collaboration-activity-wrapper {
   min-height: 200px;
+  margin-top: 30px;
 }
 
 .story .story-collaborators {
