--- a/drupal/sites/all/themes/checkdesk/assets/scss/module/content/_story.scss
+++ b/drupal/sites/all/themes/checkdesk/assets/scss/module/content/_story.scss
@@ -167,7 +167,6 @@
     border-bottom: 1px solid rgba($firefly, 0.1);
   }
   padding-bottom: 15px;
-  margin-bottom: 30px;
   & > div, & > ul {
     display: table-cell;
     width: 100%;
@@ -214,6 +213,7 @@
 
 .story .story-collaboration-activity-wrapper {
   min-height: 200px;
+  margin-top: 30px;
 }
 
 .story .story-collaborators {
